# howtographql-graphql-python-tutorial

./: README.md  pyproject.toml
config/: schema.py  settings.py  wsgi.py
hackernews/config/: schema.py  settings.py  urls.py  wsgi.py
hackernews/links/: models.py  schema.py
hackernews/links/migrations/: 0001_initial.py  0002_link_posted_by.py  0003_vote.py
hackernews/users/: schema.py
