[tool.poetry]
name = "hackernews"
version = "1.0.0"
description = "https://www.howtographql.com/graphql-python/0-introduction/"
authors = ["Dan R Beste <drb@wishalloy.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.14"
django = "^2.1.4"
graphene-django = "^2.2.0"
django-filter = "^2.0.0"
django-graphql-jwt = "^0.1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
isort = "^5.9.2"
black = "^21.7b0"
pylint = "^2.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
